@@ -498,7 +498,32 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
                 iconpath = self.get_icon_filename(appdetails.icon, self.APP_ICON_SIZE)
                 
                 if not dialogs.confirm_remove(None, self.datadir, primary, self.cache,
-                                            button_text, iconpath, depends):
+                                            button_text, iconpath, depends, self.icons, self.db):
+                    # for appdetailsview-webkit
+                    # self._set_action_button_sensitive(True)
+
+                    self.backend.emit("transaction-stopped", app.pkgname)
+                    return
+        elif action == "install":
+            # If we are installing a package, check for dependencies that will 
+            # also be removed and show a dialog for confirmation
+            # generic removal text (fixing LP bug #554319)
+            (primary, button_text) = self.distro.get_install_warning_text(self.cache,
+                                                                          appdetails.pkg,
+                                                                          app.name)
+                                                                          
+            # ask for confirmation if we have depends that will be removed
+            depends = []
+            deps_remove = self.cache.get_all_deps_removing(appdetails.pkg)
+            for dep in deps_remove:
+                if self.cache[dep].installed != None:
+                    depends.append(dep)
+            
+            if depends:
+                iconpath = self.get_icon_filename(appdetails.icon, self.APP_ICON_SIZE)
+                
+                if not dialogs.confirm_remove(None, self.datadir, primary, self.cache,
+                                            button_text, iconpath, depends, self.icons, self.db):
                     # for appdetailsview-webkit
                     # self._set_action_button_sensitive(True)
 
