@@ -16,8 +16,10 @@ software-center (2.1.14) UNRELEASED; urgency=low
   
   [ Mohamed Amine IL Idrissi ]
   * Do not include download size of installed app.
-  
- -- Gary Lasker <gary.lasker@canonical.com>  Thu, 26 Aug 2010 12:48:03 -0400
+  * An alert will show if you try to remove conflicting packages (LP: #554319)
+  * The dependency remove alert will now show application icons
+
+ -- Mohamed Amine IL Idrissi <ilidrissiamine@gmail.com>  Thu, 26 Aug 2010 18:44:58 +0000
 
 software-center (2.1.13) maverick; urgency=low
 
